--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,4 +14,5 @@
 @import "./components/about";
 @import "./components/benefits";
 @import "./components/trainers";
-
+@import "./components/tariffs";
+@import "./components/order";
