--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,13 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="container-fluid footer__container">
+    <div class="footer__left">
+      <a href="#" class="logo footer__logo">
+        <img loading="lazy" src="img/logo.svg" class="image" width="228" height="48" alt="logo roboschool">
+      </a>
+      <div class="footer__copy">© ROBO.SCHOOL</div>
+    </div>
+    <div class="footer__right">
+      <a href="tel:+790934340223" class="phone">+7 800 000 11 22</a>
+    </div>
+  </div>
 </footer>
