--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -10,4 +10,9 @@
     border-radius: 5px;
     padding: 25px 30px;
     min-width: 260px;
+
+    &--dark {
+        background-color: var(--dark-color);
+        color: var(--light-color);
+    }
 }
