--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,10 +1,11 @@
 .hero  {
     min-height: 800px;
-    padding-top: 250px;
+    padding-top: 160px;
     background-color: var(--dark-color);
 
     &__container {
-        @include flex;
+        @include flex-v-center;
+
     }
 
     &__content {
