--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "./components/btn";
 @import "./components/section-title";
 @import "./components/tooltip";
+@import "./components/form";
 @import "./components/header";
 @import "./components/hero";
 @import "./components/phone";
@@ -16,3 +17,4 @@
 @import "./components/trainers";
 @import "./components/tariffs";
 @import "./components/order";
+@import "./components/footer";
