--- a/src/scss/components/_order.scss
+++ b/src/scss/components/_order.scss
@@ -2,6 +2,8 @@
     @include image-set('../img/precent');
     padding: 87px 0;
     background-color: var(--accent-color);
+    background-position: bottom center;
+    background-size: cover;
 
     &__container {
         display: grid;
@@ -11,6 +13,12 @@
     &__left {
         grid-column: 5 span;
         padding-left: 60px;
+
+        @include high-tablet {
+            grid-column: 12 span;
+            padding-left: 0;
+            margin-bottom: 30px;
+        }
     }
 
     &__title {
@@ -33,6 +41,12 @@
         justify-content: flex-end;
         grid-column: 7 span;
         padding-right: 60px;
+
+        @include high-tablet {
+            justify-content: flex-start;
+            grid-column: 12 span;
+            padding-right: 0;
+        }
     }
 
     &__form {
