--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,14 +3,18 @@
     <a href="#" class="logo">
       <img loading="lazy" src="img/logo.svg" class="image" width="228" height="48" alt="logo roboschool">
     </a>
-    <nav class="nav" title="главное меню">
+    <nav class="nav" title="главное меню" data-menu>
       <ul class="nav__list list-reset">
         <li class="nav__item"><a href="#about" class="nav__link" data-scroll>О школе</a></li>
         <li class="nav__item"><a href="#trainers" class="nav__link" data-scroll>Тренеры</a></li>
         <li class="nav__item"><a href="#tariffs" class="nav__link" data-scroll>Стоимость</a></li>
       </ul>
     </nav>
-    <a href="tel:+790934340223" class="phone">+7 800 000 11 22</a>
-  
+    <a href="tel:+790934340223" class="phone header__phone">+7 800 000 11 22</a>
+    <button class="burger btn-reset" aria-label="Открыть меню" aria-expanded="false"  data-burger>
+      <span class="burger__line"></span>
+      <span class="burger__line"></span>
+      <span class="burger__line"></span>
+    </button>
   </div>
 </header>
