--- a/src/partials/order.html
+++ b/src/partials/order.html
@@ -5,7 +5,7 @@
             <p class="order__descr">Акция действительна до 10 марта 2022 года</p>
         </div>
         <div class="order__right">
-            <form action="#" class="form order__forms">
+            <form action="#" class="form order__form">
               <label class="form__label">
                 <input type="text" name="Имя" class="input-reset form__input input-name" placeholder="Имя">
               </label>
