--- a/src/scss/components/_benefits.scss
+++ b/src/scss/components/_benefits.scss
@@ -5,11 +5,20 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         gap: 40px;
+
+        @include mobile {
+            grid-template-columns: repeat(4, 1fr);
+         }
     }
 
     &__item {
         grid-column: 4 span;
         list-style: none;
+
+        @include high-desktop {
+            grid-column: 6 span;
+        }
+
     }
 
     &__subtitle {
