--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -6,6 +6,11 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        
+        @include mobile {
+            flex-direction: column;
+        }
     }
 
     &__logo {
@@ -18,5 +23,10 @@
         font-size: 16px;
         line-height: 160%;
         color: rgba(255, 255, 255, 0.7);
+
+        @include mobile {
+            text-align: center;
+            margin-bottom: 30px;
+        }
     }
 } 
