--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -10,6 +10,8 @@
         width: 100%;
     }
 
+   
+
     &__input {
         border-radius: 5px;
         width: 100%;
@@ -28,4 +30,8 @@
     &__btn {
         padding: 18px 30px;
     }
+}
+.just-validate-error-label {
+    margin-bottom: 3px;
+    color: var(--light-color) !important;
 }
