--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -7,6 +7,29 @@
 
     &__container {
         @include flex-all-sb;
+
+        @include high-tablet {
+            justify-content: initial;
+        }
+    }
+
+    &__phone {
+        
+        @include high-tablet {
+            font-size: 0;
+            position: relative;
+            margin-right: 10px;
+            margin-left: auto;
+            width: 44px;
+            height: 44px;
+            border: 1px solid rgba(255,255,255,0.2);
+            border-radius: 10px;
+            background-image: url("../../img/phone.svg");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: 24px 24px;
+
+        }
     }
 }
 .nav {
@@ -25,5 +48,11 @@
         font-size: 20px;
         line-height: 160%;
         color: var(--light-color);
+    }
+
+   
+
+    @include high-tablet {
+        display: none;
     }
 }
