--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -10,6 +10,10 @@
 
     &__content {
         max-width: 516px;
+
+        @include tablet {
+            max-width: none;
+        }
     }
 
     &__title {
@@ -29,5 +33,16 @@
             font-size: 20px;
             text-transform: initial;
         }
+    }
+
+    &__image {
+        @include tablet {
+            display: none;
+        }
+    }
+
+    @include tablet {
+        min-height: auto;
+        padding-bottom: 100px;
     }
 }
