--- a/src/scss/components/_tariffs.scss
+++ b/src/scss/components/_tariffs.scss
@@ -5,6 +5,14 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         gap: 40px;
+
+        @include high-tablet {
+            gap: 20px;
+        }
+
+        @include small-tablet {
+            grid-template-columns: repeat(8, 1fr);
+         }
     }
 
     &__item {
@@ -32,7 +40,15 @@
             .tariffs__descr {
                 color: var(--light-color);
             }
+
+            @include high-desktop {
+                transform: scale(1);
+            }
         }
+
+        @include small-tablet {
+            grid-column: 8 span;
+         }
     }
 
     &__subtitle {
@@ -70,6 +86,14 @@
         font-size: 50px;
         line-height: 160%;
         color: var(--dark-color);
+
+        @include high-desktop {
+            font-size: 45px;
+        }
+
+        @include high-tablet {
+           font-size: 32px;
+        }
     }
 
     &__descr {
@@ -85,5 +109,11 @@
     &__btn {
         min-width: 100%;
         margin-top: 60px;
+
+        @include high-tablet {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+        }
     }
 }
