--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,12 +6,14 @@
 
 // подключения компонентов страницы
 @import "./components/btn";
+@import "./components/phone";
 @import "./components/section-title";
+@import "./components/logo";
 @import "./components/tooltip";
 @import "./components/form";
+@import "./components/burger";
 @import "./components/header";
 @import "./components/hero";
-@import "./components/phone";
 @import "./components/about";
 @import "./components/benefits";
 @import "./components/trainers";
