--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,10 +5,11 @@
     </a>
     <nav class="nav" title="главное меню" data-menu>
       <ul class="nav__list list-reset">
-        <li class="nav__item"><a href="#about" class="nav__link" data-scroll>О школе</a></li>
-        <li class="nav__item"><a href="#trainers" class="nav__link" data-scroll>Тренеры</a></li>
-        <li class="nav__item"><a href="#tariffs" class="nav__link" data-scroll>Стоимость</a></li>
+        <li class="nav__item"><a href="#about" class="nav__link" data-scroll data-menu-item>О школе</a></li>
+        <li class="nav__item"><a href="#trainers" class="nav__link" data-scroll data-menu-item>Тренеры</a></li>
+        <li class="nav__item"><a href="#tariffs" class="nav__link" data-scroll data-menu-item>Стоимость</a></li>
       </ul>
+      <button class="btn-reset burger-close" aria-label="закрыть меню" data-menu-close></button>
     </nav>
     <a href="tel:+790934340223" class="phone header__phone">+7 800 000 11 22</a>
     <button class="burger btn-reset" aria-label="Открыть меню" aria-expanded="false"  data-burger>
