--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -35,11 +35,23 @@
 .nav {
     &__list {
         @include flex-v-center;
+
+        @include high-tablet {
+            @include flex-all-center;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+        }
     }
 
     &__item {
         &:not(:last-child) {
             margin-right: 40px;
+
+            @include high-tablet {
+                margin-right: 0;
+                margin-bottom: 30px;
+            }
         }
     }
 
@@ -48,11 +60,26 @@
         font-size: 20px;
         line-height: 160%;
         color: var(--light-color);
-    }
 
-   
+
+    }
 
     @include high-tablet {
-        display: none;
+        position: fixed;
+        left: 0;
+        top: 0;
+        z-index: 50;
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        background-color: var(--dark-color);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
     }
+}
+
+.menu--active {
+    opacity: 1;
+    visibility: visible;
 }
