--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "./components/phone";
 @import "./components/section-title";
 @import "./components/logo";
+@import "./components/popup";
 @import "./components/tooltip";
 @import "./components/form";
 @import "./components/burger";
