add modal window

--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -9,6 +9,7 @@
             <source srcset="img/popup-1.webp" type="image/webp">
             <img loading="lazy" src="img/popup-1.jpg" class="image" width="160" height="222" alt="Марина Орлова">
           </picture>
+        </div>
           <div class="popup__info">
             <div class="popup__name">Марина Орлова</div>
             <div class="popup__post">преподаватель по робототехнике</div>
@@ -29,36 +30,63 @@
               </li>
             </ul>
           </div>
-        </div>
+        
       </div>
       <div class="popup__bottom">
         <div class="tabs" data-tabs="popup">
-          <ul class="tabs__nav">
-            <li class="tabs__nav-item"><button class="tabs__nav-btn" type="button">Образование</button></li>
-            <li class="tabs__nav-item"><button class="tabs__nav-btn" type="button">Опыт работы</button></li>
-            <li class="tabs__nav-item"><button class="tabs__nav-btn" type="button">Награды</button></li>
-          </ul>
+          <div class="tabs__menu">
+            <ul class="list-reset tabs__nav">
+              <li class="tabs__nav-item"><button class="btn-reset tabs__nav-btn" type="button">Образование</button></li>
+              <li class="tabs__nav-item"><button class="btn-reset tabs__nav-btn" type="button">Опыт работы</button></li>
+              <li class="tabs__nav-item"><button class="btn-reset tabs__nav-btn" type="button">Награды</button></li>
+            </ul>
+          </div>
+          
           <div class="tabs__content">
             <div class="tabs__panel">
-              <div class="popup__descr">
-                <p class="popup__text">Сентябрь 1995 — Июнь 2000</p>
-                <p class="popup__text">Санкт-Петербургский политехнический университет Петра Великого</p>
-                <p class="popup__text">Факультет: Компьютерных наук и технологий</p>
-                <p class="popup__text">Специальность: Математика и компьютерные науки</p>
-                <p class="popup__text">Форма обучения: Очная</p>
-              </div>
-              <div class="popup__content">
-                <h3 class="popup__subtitle">
+              <div class="popup__bottom-content" data-simplebar>
+                <div class="popup__descr">
                   <p class="popup__text">Сентябрь 1995 — Июнь 2000</p>
                   <p class="popup__text">Санкт-Петербургский политехнический университет Петра Великого</p>
                   <p class="popup__text">Факультет: Компьютерных наук и технологий</p>
                   <p class="popup__text">Специальность: Математика и компьютерные науки</p>
                   <p class="popup__text">Форма обучения: Очная</p>
-                </h3>
+                </div>
+                <div class="popup__content">
+                    <h3 class="popup__subtitle">Курсы и тренинги</h3>
+                    <p class="popup__text">Сентябрь 1995 — Июнь 2000</p>
+                    <p class="popup__text">Санкт-Петербургский политехнический университет Петра Великого</p>
+                    <p class="popup__text">Факультет: Компьютерных наук и технологий</p>
+                    <p class="popup__text">Специальность: Математика и компьютерные науки</p>
+                    <p class="popup__text">Форма обучения: Очная</p>
+                </div>
               </div>
+              
             </div>
-            <div class="tabs__panel"></div>
-            <div class="tabs__panel"></div>
+            <div class="tabs__panel">
+              <div class="popup__bottom-content" data-simplebar>
+                <div class="popup__descr">
+                  <p class="popup__text">Сентябрь 2005 — Июнь 2008</p>
+                  <p class="popup__text">Санкт-Петербургский политехнический университет Петра Великого</p>
+                  <p class="popup__text">Факультет: Компьютерных наук и технологий</p>
+                  <p class="popup__text">Специальность: Математика и компьютерные науки</p>
+                  <p class="popup__text">Форма обучения: Очная</p>
+                </div>
+              </div>
+              
+            </div>
+            <div class="tabs__panel">
+              <div class="popup__bottom-content" data-simplebar>
+                <div class="popup__descr">
+                  <p class="popup__text">Сентябрь 2008 — Июль 2010</p>
+                  <p class="popup__text">Санкт-Петербургский политехнический университет Петра Великого</p>
+                  <p class="popup__text">Факультет: Компьютерных наук и технологий</p>
+                  <p class="popup__text">Специальность: Математика и компьютерные науки</p>
+                  <p class="popup__text">Форма обучения: Очная</p>
+                </div>
+              </div>
+              
+            </div>
           </div>
         </div>
       </div>
