--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import "./components/section-title";
 @import "./components/logo";
 @import "./components/popup";
+@import "./components/social";
 @import "./components/tooltip";
 @import "./components/form";
 @import "./components/burger";
